Trained up to 38 epochs, all that remains is to write the metrics functions, as well as visualize

--- a/yolov3/train.ipynb
+++ b/yolov3/train.ipynb
@@ -22,7 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = YOLOv3(IMG_SHAPE)"
+    "model = YOLOv3(IMG_SHAPE)\n",
+    "state_dict = torch.load(r'J:\\ML_for_porfolio\\segmentation\\yolov3\\models\\yolov3_38epochs.pth')\n",
+    "model.load_state_dict(state_dict)"
    ]
   },
   {
@@ -54,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"J:\\ML_for_porfolio\\segmentation\\yolov3\\models\\yolov3_rsna.pth\")"
+    "torch.save(model.state_dict(), \"J:\\ML_for_porfolio\\segmentation\\yolov3\\models\\yolov3_rsna_38epochs.pth\")"
    ]
   }
  ],
